# varro

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: checks.yml  lib.yml  pyvarro.yml
.pierre/ci/: base.config.json  ci.ts  lib.ts  pyvarro.ts
examples/: and_search_operator.rs  document.rs  index_and_retrieve.rs  ingest.rs  ingest_flush_per_doc.rs  search.rs  search_and_retrieve.rs  search_bm25.rs  webserver.rs  with_config.rs
lib/: .gitignore  Cargo.toml
lib/documents/: 10-first-things.md  command-line-upgrade.md  configuring-emacs-from-scratch-in-2025.md  docker-intro.md  docker-tips-tricks.md  emacs-intro.md  git-interactive-rebase.md  git-intro.md  git-rebase.md  vibecoding-in-emacs-with-amp.md
lib/examples/: README.md  and_search_operator.rs  ingest.rs  ingest_flush_per_doc.rs  remove_document.rs  search_and_retrieve.rs  search_bm25.rs  webserver.rs  with_config.rs
lib/src/: compaction.rs  document.rs  filesystem.rs  flusher.rs  lib.rs  manifest.rs  options.rs  ranking.rs  search.rs  segment.rs  tokens.rs  vector.rs  vql.rs
pyvarro/: .gitignore  Cargo.toml  README.md  main.py  pyproject.toml
pyvarro/bindings/: Cargo.toml
pyvarro/bindings/src/: lib.rs
pyvarro/examples/: ingest.py  main.py  pyproject.toml  search.py  webserver.py
pyvarro/src/: document.rs  lib.rs  search.rs
pyvarro/src/pyvarro/: pyvarro.pyi
src/: compaction.rs  document.rs  filesystem.rs  lib.rs  manifest.rs  ranking.rs  segment.rs
varrojs/: .gitignore  Cargo.toml  README.md  package.json
varrojs/src/: lib.rs
