[package]
name = "varro"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bincode = "2.0.1"
log = "0.4.27"
rust-s3 = { version = "0.37.0", default-features = false, features = ["blocking", "sync-native-tls"], optional = true }
tempfile = "3.22.0"
uuid = { version = "1.17.0", features = ["v4"] }

[features]
s3 = ["dep:rust-s3"]

[dev-dependencies]
env_logger = "0.11.8"
actix-web = "4"
serde = { version = "1.0.219", features = ["derive"] }
