[package]
name = "varro"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bincode = "2.0.1"
fastembed = "5.2.0"
log = "0.4.27"
rusqlite = { version = "0.37.0", features = ["bundled"] }
rust-s3 = { version = "0.37.0", default-features = false, features = ["blocking", "sync-native-tls"], optional = true }
sqlite-vec = "0.1.6"
tempfile = "3.22.0"
uuid = { version = "1.17.0", features = ["v4"] }
zerocopy = "0.8.27"

[features]
s3 = ["dep:rust-s3"]

[dev-dependencies]
env_logger = "0.11.8"
actix-web = "4"
serde = { version = "1.0.219", features = ["derive"] }
