[project]
name = "pyvarro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Shane Kennedy", email = "shane.kennedy19@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyvarro"]
include = ["src/pyvarro/lib.so"]

[tool.hatch.build]
artifacts = ["src/pyvarro/lib.so"]
